@@ -6,6 +6,7 @@ Changelog for pdoTools.
 - Improved method pdoTools::parseChunk().
 - Improved method pdoTools::fastProcess().
 - Improved method pdoTools::makePlaceholders().
+- Accelerated snippet pdoNeighbors.
 
 1.8.9 pl4
 ==============
